Made html webpages more friendly for spanish-speakers

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -16,6 +16,6 @@
             <option value="es">Español</option>
         </select>
     </div>
-    <button type="submit" class="btn btn-primary">Submit/Enviar</button>
+    <button type="submit" class="btn btn-primary">Submit | Enviar</button>
 </form>
 {% endblock %}
