--- a/templates/questionnaire.html
+++ b/templates/questionnaire.html
@@ -53,7 +53,10 @@
     <p>
         Error: please select a language.
     </p>
-    <a href="{{ url_for('home') }}"> Return to Homepage </a>
+    <p>
+        Error: seleccione un idioma.
+    </p>
+    <a href="{{ url_for('home') }}"> Homepage | Página inicial </a>
 </div>
 {% endif %}
 
